# address-factory

./: .gitignore  Cargo.toml  README.md  TODO.txt  address-factory.json  coldcard-export.json  fake-export.json  signed-address-generator-state.json  test.txt
examples/: desc_wizard.rs  sql.rs
src/: coldcard.rs  database.rs  factory_state.rs  generator_state.rs  generic.rs  gpg.rs  lib.rs  main.rs  util.rs  wizard_steps.rs
